--- a/Interface_Layer/Views/UsuariosRoles.html
+++ b/Interface_Layer/Views/UsuariosRoles.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-    <title>Midis Seguridad | Menus por Rol</title>
+    <title>Midis Seguridad | Roles por Usuario</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../Content/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="../Content/style.css">
@@ -30,7 +30,7 @@
         </nav>
     </div>
 
-    <div class="container-fluid" ng-controller="MenuRolCtrl">
+    <div class="container" ng-controller="MenuRolCtrl">
         <div class="alert alert-danger" data-ng-show="tieneError">
             <strong>ERROR: </strong> {{ error }}
         </div>
@@ -49,57 +49,50 @@
             </div>
 
             <div class="col-md-6">
-                <div class="container">
-                    <h4>Menus</h4>
-                    <form name="frmBusquedaMenu">
-                        <div class="container-fluid form-group">
-                            <label for="cmbBuscarSistema" class="col-md-2 control-label">Sistema: </label>
-                            <div class="col-md-4">
-                                <select id="cmbBuscarSistema" class="form-control" data-ng-options="sistema.Nombre for sistema in sistemas" data-ng-model="sistema" ng-change="buscarModulo()"></select>
-                            </div>
+                <h4>Menus</h4>
+                <form name="frmBusquedaMenu">
+                    <div class="container-fluid form-group">
+                        <label for="cmbBuscarSistema" class="col-md-2 control-label">Sistema: </label>
+                        <div class="col-md-4">
+                            <select id="cmbBuscarSistema" class="form-control" data-ng-options="sistema.Nombre for sistema in sistemas" data-ng-model="sistema" ng-change="buscarModulo()"></select>
                         </div>
-                        <div class="container-fluid form-group">
-                            <label for="cmbBuscarModulo" class="col-md-2 control-label">Modulo: </label>
-                            <div class="col-md-4">
-                                <select id="cmbBuscarModulo" class="form-control" data-ng-options="modulo.Nombre for modulo in modulos" data-ng-model="modulo"></select>
-                            </div>
-                        </div>
-                        <p>
-                            <input type="button" value="Buscar" data-ng-click="buscarMenu()" class="btn btn-primary" />
-                        </p>
-                    </form>
-                    <div class="list-group">
-                        <a href="#" class="list-group-item" ng-repeat="menu in menus" data-ng-click="seleccionaMenu(menu, $index)" ng-class="{active: $index == selectedMenu}">
-                            <p class="list-group-item-text">{{menu.Nombre}}</p>
-                            <!--<input type="button" class="btn btn-primary" value="Seleccionar" data-ng-click="seleccionaPersona(persona)" />-->
-                        </a>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="container">
-                <div class="col-md-10">
-                    <input type="hidden" id="hdnRol" data-ng-model="rolSeleccionado" />
-                    <input type="hidden" id="hdnMenu" data-ng-model="menuSeleccionada" />
-                    <!--<input type="text" class="form-control" id="txtPersona" data-ng-model="personaSeleccionada.Nombre" />-->
-                </div>
-                <div class="col-md-2">
-                    <input type="button" class="btn btn-primary" value="Agregar" data-ng-click="agregaMenu(rol, menu)" />
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="container">
-                <h4>Menus del Rol</h4>
+                    <div class="container-fluid form-group">
+                        <label for="cmbBuscarModulo" class="col-md-2 control-label">Modulo: </label>
+                        <div class="col-md-4">
+                            <select id="cmbBuscarModulo" class="form-control" data-ng-options="modulo.Nombre for modulo in modulos" data-ng-model="modulo"></select>
+                        </div>
+                    </div>
+                    <p>
+                        <input type="button" value="Buscar" data-ng-click="buscarMenu()" class="btn btn-primary" />
+                    </p>
+                </form>
                 <div class="list-group">
-                    <a href="#" class="list-group-item" ng-repeat="menurol in menusroles">
-                        <p class="list-group-item-text">{{menurol.Menu.Modulo.Sistema.Nombre}} / {{menurol.Menu.Modulo.Nombre}} / {{menurol.Menu.Nombre}}</p>
-                        <!--<p class="list-group-item-text">{{menurol.Rol}}</p>-->
+                    <a href="#" class="list-group-item" ng-repeat="menu in menus" data-ng-click="seleccionaMenu(menu, $index)" ng-class="{active: $index == selectedMenu}">
+                        <p class="list-group-item-text">{{menu.Nombre}}</p>
+                        <!--<input type="button" class="btn btn-primary" value="Seleccionar" data-ng-click="seleccionaPersona(persona)" />-->
                     </a>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-10">
+                <input type="hidden" id="hdnRol" data-ng-model="rolSeleccionado" />
+                <input type="hidden" id="hdnMenu" data-ng-model="menuSeleccionada" />
+                <!--<input type="text" class="form-control" id="txtPersona" data-ng-model="personaSeleccionada.Nombre" />-->
+            </div>
+            <div class="col-md-2">
+                <input type="button" class="btn btn-primary" value="Agregar" data-ng-click="agregaMenu(rol, menu)" />
+            </div>
+        </div>
+
+        <div class="row">
+            <h4>Menus del Rol</h4>
+            <div class="list-group">
+                <a href="#" class="list-group-item" ng-repeat="menurol in menusroles">
+                    <p class="list-group-item-text">{{menurol.Menu.Modulo.Sistema.Nombre}} / {{menurol.Menu.Modulo.Nombre}} / {{menurol.Menu.Nombre}}</p>
+                    <!--<p class="list-group-item-text">{{menurol.Rol}}</p>-->
+                </a>
             </div>
         </div>
 
