--- a/Interface_Layer/Views/UsuariosRoles.html
+++ b/Interface_Layer/Views/UsuariosRoles.html
@@ -30,7 +30,7 @@
         </nav>
     </div>
 
-    <div class="container" ng-controller="MenuRolCtrl">
+    <div class="container-fluid" ng-controller="RolUsuarioCtrl">
         <div class="alert alert-danger" data-ng-show="tieneError">
             <strong>ERROR: </strong> {{ error }}
         </div>
@@ -38,61 +38,69 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="container">
-                    <h4>Roles</h4>
+                    <h4>Usuarios</h4>
+                    <form name="frmBusquedaUsuario">
+                        <div class="container-fluid form-group">
+                            <label for="txtBuscarUsuario" class="col-md-2 control-label">Usuario: </label>
+                            <div class="col-md-4">
+                                <input type="text" class="form-control" id="txtBuscarUsuario" placeholder="Ingrese el nombre del usuario para buscar" data-ng-model="usuario" maxlength="100" />
+                            </div>
+                        </div>
+                        <div class="container-fluid form-group">
+                            <label for="txtBuscarNombrePersona" class="col-md-2 control-label">Nombre Persona: </label>
+                            <div class="col-md-4"> 
+                                <input type="text" class="form-control" id="txtBuscarNombrePersona" placeholder="Ingrese el nombre de la persona para buscar" data-ng-model="nombrePersona" maxlength="100" />
+                            </div>
+                        </div>
+                        <p>
+                            <input type="button" value="Buscar" data-ng-click="buscarUsuarios()" class="btn btn-primary" />
+                        </p>
+                    </form>
                     <div class="list-group col-md-6">
-                        <a href="#" class="list-group-item" ng-repeat="rol in roles" data-ng-click="buscar(rol, $index)" ng-class="{active: $index == selectedRol}">
-                            <p class="list-group-item-text">{{rol.Nombre}}</p>
-                            <!--<input type="button" class="btn btn-primary" value="Seleccionar" />-->
+                        <a href="#" class="list-group-item" ng-repeat="usuario in usuarios" data-ng-click="buscar(usuario, $index)" ng-class="{active: $index == selectedUsuario}">
+                            <p class="list-group-item-text">{{usuario.Usuario}}</p>
                         </a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6">
-                <h4>Menus</h4>
-                <form name="frmBusquedaMenu">
-                    <div class="container-fluid form-group">
-                        <label for="cmbBuscarSistema" class="col-md-2 control-label">Sistema: </label>
-                        <div class="col-md-4">
-                            <select id="cmbBuscarSistema" class="form-control" data-ng-options="sistema.Nombre for sistema in sistemas" data-ng-model="sistema" ng-change="buscarModulo()"></select>
-                        </div>
-                    </div>
-                    <div class="container-fluid form-group">
-                        <label for="cmbBuscarModulo" class="col-md-2 control-label">Modulo: </label>
-                        <div class="col-md-4">
-                            <select id="cmbBuscarModulo" class="form-control" data-ng-options="modulo.Nombre for modulo in modulos" data-ng-model="modulo"></select>
-                        </div>
-                    </div>
-                    <p>
-                        <input type="button" value="Buscar" data-ng-click="buscarMenu()" class="btn btn-primary" />
-                    </p>
-                </form>
+                <h4>Roles</h4>
                 <div class="list-group">
-                    <a href="#" class="list-group-item" ng-repeat="menu in menus" data-ng-click="seleccionaMenu(menu, $index)" ng-class="{active: $index == selectedMenu}">
-                        <p class="list-group-item-text">{{menu.Nombre}}</p>
-                        <!--<input type="button" class="btn btn-primary" value="Seleccionar" data-ng-click="seleccionaPersona(persona)" />-->
+                    <a href="#" class="list-group-item" ng-repeat="rol in roles" data-ng-click="seleccionaRol(rol, $index)" ng-class="{active: $index == selectedRol}">
+                        <p class="list-group-item-text">{{rol.Nombre}}</p>
                     </a>
                 </div>
             </div>
         </div>
+
         <div class="row">
             <div class="col-md-10">
+                <input type="hidden" id="hdnUsuario" data-ng-model="usuarioSeleccionado" />
                 <input type="hidden" id="hdnRol" data-ng-model="rolSeleccionado" />
-                <input type="hidden" id="hdnMenu" data-ng-model="menuSeleccionada" />
-                <!--<input type="text" class="form-control" id="txtPersona" data-ng-model="personaSeleccionada.Nombre" />-->
             </div>
             <div class="col-md-2">
-                <input type="button" class="btn btn-primary" value="Agregar" data-ng-click="agregaMenu(rol, menu)" />
+                <input type="button" class="btn btn-primary" value="Agregar" data-ng-click="agregaRol()" />
             </div>
         </div>
 
         <div class="row">
-            <h4>Menus del Rol</h4>
-            <div class="list-group">
-                <a href="#" class="list-group-item" ng-repeat="menurol in menusroles">
-                    <p class="list-group-item-text">{{menurol.Menu.Modulo.Sistema.Nombre}} / {{menurol.Menu.Modulo.Nombre}} / {{menurol.Menu.Nombre}}</p>
-                    <!--<p class="list-group-item-text">{{menurol.Rol}}</p>-->
-                </a>
+            <div class="container">
+                <h4>Roles por Usuarios</h4>
+                <div class="list-group">
+                    <a href="#" class="list-group-item" ng-repeat="usuariorol in usuariosroles">
+                        <!--<p class="list-group-item-text">{{usuariorol.Rol.Nombre}}</p>-->
+                        <div class="row">
+                            <div class="col-md-7">
+                                <label class="list-group-item-text">{{usuariorol.Rol.Nombre}}</label>
+                            </div>
+                            <div class="col-md-3"></div>
+                            <div class="col-md-2">
+                                <input type="button" class="btn btn-danger" value="Eliminar" data-ng-click="eliminarRol(usuariorol)" />
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -109,6 +117,6 @@
     <script type="text/javascript" src="../Scripts/angular.min.js"></script>
     <script type="text/javascript" src="../Angular/myApp.module.js"></script>
     <script type="text/javascript" src="../Angular/menusCtrl.js"></script>
-    <script type="text/javascript" src="../Angular/menurolCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/rolusuarioCtrl.js"></script>
 </body>
 </html>
