--- a/Interface_Layer/Views/Index.html
+++ b/Interface_Layer/Views/Index.html
@@ -33,7 +33,12 @@
     <script type="text/javascript" src="../Scripts/jquery-3.1.1.min.js" charset="UTF-8"></script>
     <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../Scripts/angular.min.js"></script>
+    <script type="text/javascript" src="../Scripts/angular-route.js"></script>
+    <script type="text/javascript" src="../Scripts/angular-local-storage.min.js"></script>
     <script type="text/javascript" src="../Angular/myApp.module.js"></script>
+    <script type="text/javascript" src="../Angular/authData.js"></script>
+    <script type="text/javascript" src="../Angular/authService.js"></script>
+    <script type="text/javascript" src="../Scripts/angular-local-storage.min.js"></script>
     <script type="text/javascript" src="../Angular/menusCtrl.js"></script>
 </body>
 </html>
