--- a/Interface_Layer/Views/Index.html
+++ b/Interface_Layer/Views/Index.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="../Scripts/jquery-3.1.1.min.js" charset="UTF-8"></script>
     <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../Scripts/angular.min.js"></script>
-    <script type="text/javascript" src="../Angular/myApp.module.js"></script>
+    <script type="text/javascript" src="../Angular/myApp.js"></script>
     <!--<script type="text/javascript" src="../Angular/Controllers/loginCtrl.js"></script>
     <script type="text/javascript" src="../Angular/Services/loginSrv.js"></script>
     <script type="text/javascript" src="../Angular/Services/accountSrv.js"></script>-->
