--- a/Interface_Layer/Views/Sistemas.html
+++ b/Interface_Layer/Views/Sistemas.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group">
-                    <label for="txtRutaLogica" class="col-md-2 control-label">Descripcion: </label>
+                    <label for="txtRutaLogica" class="col-md-2 control-label">Ruta Lógica: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtRutaLogica" placeholder="Ingrese la ruta lógica donde se alojará el sistema" data-ng-model="mysistema.RutaLogica" maxlength="200" />
                     </div>
