--- a/Interface_Layer/Views/Menus.html
+++ b/Interface_Layer/Views/Menus.html
@@ -39,30 +39,29 @@
         <div class="alert alert-danger" data-ng-show="tieneError">
             <strong>ERROR: </strong> {{ error }}
         </div>
-        <!--<strong class="error">{{ error }}</strong>-->
         <!--MANTENIMIENTO-->
-        <div class="row" data-ng-show="estaEditable">
+        <div class="row">
             <form name="frmMenu" style="width:800px;margin:0px auto;">
                 <input type="hidden" id="hdnId" data-ng-model="mymenu.Id" />
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtCodigo" class="col-md-2 control-label">Codigo: </label>
                     <div class="col-md-2">
                         <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del menú (obligatorio)" data-ng-model="mymenu.Codigo" maxlength="7" required />
                     </div>
                 </div>
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtNombre" class="col-md-2 control-label">Nombre: </label>
                     <div class="col-md-6">
                         <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre del menú (obligatorio)" data-ng-model="mymenu.Nombre" maxlength="50" required />
                     </div>
                 </div>
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtRuta" class="col-md-2 control-label">Ruta: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtRuta" placeholder="Ingrese la ruta del menú (obligatorio)" data-ng-model="mymenu.Ruta" maxlength="200" required />
                     </div>
                 </div>
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del menú" data-ng-model="mymenu.Descripcion" maxlength="200" />
@@ -71,31 +70,32 @@
                 <div class="container-fluid form-group">
                     <label for="cmbSistema" class="col-md-2 control-label">Sistema: </label>
                     <div class="col-md-8">
-                        <select id="cmbSistema" class="form-control" ng-options="sistema2.Nombre for sistema2 in sistemas2 track by sistema2.Id" data-ng-model="mymenu.Sistema" ng-change="buscarModulo()">
-                        </select>
+                        <select id="cmbSistema" class="form-control" ng-options="sistema.Nombre for sistema in sistemas track by sistema.Id" data-ng-model="mymenu.Sistema" ng-change="buscarModulo()"></select>
                     </div>
                 </div>
                 <div class="container-fluid form-group">
                     <label for="cmbModulo" class="col-md-2 control-label">Modulo: </label>
                     <div class="col-md-8">
-                        <select id="cmbModulo" class="form-control" ng-options="modulo2.Nombre for modulo2 in modulos2 track by modulo2.Id" data-ng-model="mymenu.Modulo">
-                        </select>
+                        <select id="cmbModulo" class="form-control" ng-options="modulo.Nombre for modulo in modulos track by modulo.Id" data-ng-model="mymenu.Modulo"></select>
                     </div>
                 </div>
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtEstado" class="col-md-2 control-label">Estado: </label>
                     <div class="col-md-6">
-                        <!--<input type="text" class="form-control" id="txtEstado" placeholder="Ingrese el estado del sistema (obligatorio)" data-ng-model="mysistema.Estado" required />-->
-                        <input type="radio" id="optActivo" name="Estado" ng-model="mymenu.EstaActivo" ng-value="true"> Activo<br>
-                        <input type="radio" id="optInactivo" name="Estado" ng-model="mymenu.EstaActivo" ng-value="false"> Inactivo<br>
+                        <input type="checkbox" id="chkEstado" name="Estado" ng-model="mymenu.EstaActivo"><br>
                     </div>
                 </div>
-                <!--<input type="hidden" id="hdnId" data-ng-model="mymodulo.Sistema" />-->
                 <br />
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!frmMenu.$valid" class="btn btn-primary" />
                         <input type="button" value="Cancelar" data-ng-click="nuevo()" class="btn btn-danger" />
+                    </div>
+                </div>
+                <div class="container-fluid form-group" data-ng-hide="estaEditable">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="button" value="Buscar" data-ng-click="buscar()" class="btn btn-primary" />
+                        <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
                     </div>
                 </div>
                 <br />
@@ -104,24 +104,6 @@
 
         <!--LISTA-->
         <div class="row" data-ng-hide="estaEditable">
-            <form name="frmBusquedaMenu" style="width:800px;margin:0px auto;">
-                <div class="container-fluid form-group">
-                    <label for="cmbBuscarSistema" class="col-md-2 control-label">Sistema: </label>
-                    <div class="col-md-8">
-                        <select id="cmbBuscarSistema" class="form-control" data-ng-options="sistema.Nombre for sistema in sistemas" data-ng-model="sistema" ng-change="buscarBusquedaModulo()"></select>
-                    </div>
-                </div>
-                <div class="container-fluid form-group">
-                    <label for="cmbBuscarModulo" class="col-md-2 control-label">Modulo: </label>
-                    <div class="col-md-8">
-                        <select id="cmbBuscarModulo" class="form-control" data-ng-options="modulo.Nombre for modulo in modulos" data-ng-model="modulo"></select>
-                    </div>
-                </div>
-                <p>
-                    <input type="button" value="Buscar" data-ng-click="buscar()" class="btn btn-primary" />
-                    <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
-                </p>
-            </form>
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
@@ -138,14 +120,11 @@
                         <td>{{menu.Codigo}}</td>
                         <td>{{menu.Nombre}}</td>
                         <td>{{menu.Ruta}}</td>
-                        <!--<td>{{menu.Descripcion}}</td>-->
                         <td>{{menu.Estado}}</td>
                         <td>{{menu.Modulo.Nombre}}</td>
                         <td>
                             <p>
-                                <!--<a data-ng-click="modificar(menu)" href="javascript:;">Modificar</a>-->
                                 <input type="button" class="btn btn-primary" value="Modificar" data-ng-click="modificar(menu)" />
-                                <!--<input type="button" class="btn btn-danger" value="Eliminar" data-ng-click="eliminar()" data-toggle="modal" data-target="#confirm-delete" />-->
                                 <input type="button" class="btn btn-danger" value="Eliminar" data-toggle="modal" data-target="#confirm-delete" />
                             </p>
                             <div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -154,10 +133,8 @@
                                         <div class="modal-header">Confirmación</div>
                                         <div class="modal-body">¿Desea realmente eliminar el menú seleccionado?</div>
                                         <div class="modal-footer">
-                                            <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>-->
                                             <input type="button" class="btn btn-default" value="Cancelar" data-dismiss="modal" />
                                             <input type="button" class="btn btn-danger btn-ok" value="Eliminar" data-dismiss="modal" data-ng-click="eliminar(menu)" />
-                                            <!--<a class="btn btn-danger btn-ok">Eliminar</a>-->
                                         </div>
                                     </div>
                                 </div>
