--- a/Interface_Layer/Views/Roles.html
+++ b/Interface_Layer/Views/Roles.html
@@ -41,34 +41,31 @@
             <strong>ERROR: </strong> {{ error }}
         </div>
         <!--MANTENIMIENTO-->
-        <div class="row" data-ng-show="estaEditable">
+        <div class="row">
             <form name="FrmRol" style="width:800px;margin:0px auto;">
                 <input type="hidden" id="hdnId" data-ng-model="mysistema.Id" />
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtNombre" class="col-md-2 control-label">Nombre: </label>
                     <div class="col-md-6">
                         <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre del rol (obligatorio)" data-ng-model="myrol.Nombre" maxlength="50" required />
                     </div>
                 </div>
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del rol" data-ng-model="myrol.Descripcion" maxlength="200" />
                     </div>
                 </div>
-                <div class="container-fluid form-group">
-                    <label for="txtEstado" class="col-md-2 control-label">Estado: </label>
-                    <div class="col-md-6">
-                        <input type="checkbox" id="chkEstado" name="Estado" ng-model="myrol.EstaActivo"><br>
-                        <!--<input type="radio" id="optActivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="true"> Activo<br>-->
-                        <!--<input type="radio" id="optInactivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="false"> Inactivo<br>-->
-                    </div>
-                </div>
                 <br />
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!FrmRol.$valid" class="btn btn-primary" />
                         <input type="button" value="Cancelar" data-ng-click="nuevo()" class="btn btn-danger" />
+                    </div>
+                </div>
+                <div class="container-fluid form-group" data-ng-hide="estaEditable">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
                     </div>
                 </div>
                 <br />
@@ -77,21 +74,16 @@
 
         <!--LISTA-->
         <div class="row" data-ng-hide="estaEditable">
-            <p>
-                <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
-            </p>
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
-                        <th class="col-md-9">Nombre</th>
-                        <th class="col-md-2">Estado</th>
-                        <th class="col-md-1"></th>
+                        <th class="col-md-10">Nombre</th>
+                        <th class="col-md-2"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr ng-repeat="rol in roles">
                         <td>{{rol.Nombre}}</td>
-                        <td>{{rol.Estado}}</td>
                         <td>
                             <p>
                                 <input type="button" class="btn btn-primary" value="Modificar" data-ng-click="modificar(rol)" />
