--- a/Interface_Layer/Views/MenusOpciones.html
+++ b/Interface_Layer/Views/MenusOpciones.html
@@ -62,9 +62,9 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="cmbMenu" class="col-md-2 control-label">Opción: </label>
+                    <label for="cmbOpcion" class="col-md-2 control-label">Opción: </label>
                     <div class="col-md-8">
-                        <select id="cmbMenu" class="form-control" ng-options="opcion.Nombre for opcion in opciones track by opcion.Id" data-ng-model="mymenuopcion.Opcion"></select>
+                        <select id="cmbOpcion" class="form-control" ng-options="opcion.Nombre for opcion in opciones track by opcion.Id" data-ng-model="mymenuopcion.Opcion"></select>
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
