--- a/Interface_Layer/Views/Modulos.html
+++ b/Interface_Layer/Views/Modulos.html
@@ -40,10 +40,10 @@
             <strong>ERROR: </strong> {{ error }}
         </div>
         <!--MANTENIMIENTO-->
-        <div class="row" data-ng-show="estaEditable">
+        <div class="row">
             <form name="frmModulo" style="width:800px;margin:0px auto;">
                 <input type="hidden" id="hdnId" data-ng-model="mymodulo.Id" />
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtCodigo" class="col-md-2 control-label">Codigo: </label>
                     <div class="col-md-2">
                         <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del módulo (obligatorio)" data-ng-model="mymodulo.Codigo" maxlength="4" required />
@@ -55,13 +55,13 @@
                         <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre del módulo (obligatorio)" data-ng-model="mymodulo.Nombre" maxlength="50" required />
                     </div>
                 </div>
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtAbreviatura" class="col-md-2 control-label">Abreviatura: </label>
                     <div class="col-md-6">
                         <input type="text" class="form-control" id="txtAbreviatura" placeholder="Ingrese la abreviatura del módulo (obligatorio)" data-ng-model="mymodulo.Abreviatura" maxlength="20" required />
                     </div>
                 </div>
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la abreviatura del módulo" data-ng-model="mymodulo.Descripcion" maxlength="200" />
@@ -74,7 +74,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="container-fluid form-group">
+                <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtEstado" class="col-md-2 control-label">Estado: </label>
                     <div class="col-md-6">
                         <input type="checkbox" id="chkEstado" name="Estado" ng-model="mymodulo.EstaActivo"><br>
@@ -82,9 +82,13 @@
                 </div>
                 <br />
                 <div class="container-fluid form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-offset-2 col-md-10" data-ng-show="estaEditable">
                         <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!frmModulo.$valid" class="btn btn-primary" />
                         <input type="button" value="Cancelar" data-ng-click="nuevo()" class="btn btn-danger" />
+                    </div>
+                    <div class="col-md-offset-2 col-md-10" data-ng-hide="estaEditable">
+                        <input type="button" value="Buscar" data-ng-click="buscar()" class="btn btn-primary" />
+                        <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
                     </div>
                 </div>
                 <br />
@@ -93,18 +97,6 @@
 
         <!--LISTA-->
         <div class="row" data-ng-hide="estaEditable">
-            <form name="frmBusquedaModulo" style="width:800px;margin:0px auto;">
-                <div class="container-fluid form-group">
-                    <label for="cmbBuscarSistema" class="col-md-2 control-label">Sistema: </label>
-                    <div class="col-md-8">
-                        <select id="cmbBuscarSistema" class="form-control" data-ng-options="sistema.Nombre for sistema in sistemas" data-ng-model="sistema"></select>
-                    </div>
-                </div>
-                <p>
-                    <input type="button" value="Buscar" data-ng-click="buscar()" class="btn btn-primary" />
-                    <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
-                </p>
-            </form>
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
